@@ -47,6 +47,7 @@ tscc                    Power calculation for two-stage case-control design
 
 asplot                  Regional association plot
 ESplot                  Effect-size plot
+cnvplot                 genomewide plot of CNVs
 mhtplot                 Manhattan plot
 mhtplot2                Manhattan plot with annotations
 miamiplot               Miamiplot (Experimental)
